[gd_scene load_steps=9 format=3 uid="uid://2q57rululc6n"]

[ext_resource type="Script" path="res://Сцени інтерфейсу/Menu.gd" id="1_npgut"]
[ext_resource type="Script" path="res://Сцени інтерфейсу/HighScore.gd" id="2_1armb"]
[ext_resource type="FontFile" uid="uid://bewt3623l6cbf" path="res://art/BG/Gagalin-Regular.otf" id="2_h5yng"]
[ext_resource type="Texture2D" uid="uid://dll3pplx7jfak" path="res://art/fon/кухня  копия.png" id="2_iuwah"]
[ext_resource type="Texture2D" uid="uid://dylnuwtsl7dee" path="res://art/knopki/гл меню копия.png" id="3_24mbk"]
[ext_resource type="PackedScene" uid="uid://brwktnd0lerd0" path="res://Сцени інтерфейсу/slider.tscn" id="5_xafo5"]
[ext_resource type="PackedScene" uid="uid://ces00klq1ru2j" path="res://Audio/SFX/UI/ui_audio.tscn" id="8_ak3d0"]
[ext_resource type="AudioStream" uid="uid://cvgc26t0j6p1h" path="res://Audio/Music/Menu/MainMenu.wav" id="10_i48uv"]

[node name="Menu" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_npgut")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 1.0
offset_right = 480.0
offset_bottom = 1025.0
texture = ExtResource("2_iuwah")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -511.5
offset_right = 240.0
offset_bottom = 512.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_24mbk")
ignore_texture_size = true
stretch_mode = 6

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MarginContainer3/QuitButton")
focus_mode = 0
theme_override_fonts/font = ExtResource("2_h5yng")
theme_override_font_sizes/font_size = 40
text = "Start"
flat = true
icon_alignment = 1
expand_icon = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_24mbk")
ignore_texture_size = true
stretch_mode = 6

[node name="OptionButton" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_h5yng")
theme_override_font_sizes/font_size = 40
text = "Options"
flat = true
icon_alignment = 1
expand_icon = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_24mbk")
ignore_texture_size = true
stretch_mode = 6

[node name="QuitButton" type="Button" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../MarginContainer/StartButton")
focus_mode = 0
theme_override_fonts/font = ExtResource("2_h5yng")
theme_override_font_sizes/font_size = 40
text = "Quit"
flat = true
icon_alignment = 1
expand_icon = true

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -63.5
offset_right = 80.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Labels" type="VBoxContainer" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Music" type="Label" parent="Options/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_h5yng")
theme_override_font_sizes/font_size = 40
text = "Music"
horizontal_alignment = 1

[node name="SFX" type="Label" parent="Options/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("2_h5yng")
theme_override_font_sizes/font_size = 40
text = "Sound FX"
horizontal_alignment = 1

[node name="Slider" parent="Options/HBoxContainer" instance=ExtResource("5_xafo5")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Options"]
layout_mode = 2
offset_top = 657.0
offset_right = 472.0
offset_bottom = 825.0

[node name="TextureButton" type="TextureButton" parent="Options/MarginContainer"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_24mbk")
ignore_texture_size = true
stretch_mode = 6

[node name="Label" type="Label" parent="Options/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h5yng")
theme_override_font_sizes/font_size = 32
text = "back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="Options/MarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_h5yng")
theme_override_font_sizes/font_size = 40
flat = true
icon_alignment = 1
expand_icon = true

[node name="HighScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -207.5
offset_right = 64.0
offset_bottom = -67.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_h5yng")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_1armb")

[node name="UIAudio" parent="." instance=ExtResource("8_ak3d0")]

[node name="StartTimer" type="Timer" parent="UIAudio"]
wait_time = 0.05
one_shot = true

[node name="MainMenuTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_i48uv")
autoplay = true
bus = &"RandomMusic"

[connection signal="pressed" from="VBoxContainer/MarginContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Options/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="UIAudio/StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="finished" from="MainMenuTheme" to="." method="_on_main_menu_theme_finished"]
